--- a/pom.xml
+++ b/pom.xml
@@ -260,18 +260,25 @@
 	</build>
 
 	<dependencies>
-	<dependency>
-		<groupId>org.knowm.xchart</groupId>
-		<artifactId>xchart</artifactId>
-		<version>3.5.0</version>
-	</dependency>
-		
+		<dependency>
+			<groupId>org.knowm.xchart</groupId>
+			<artifactId>xchart</artifactId>
+			<version>3.5.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>dnl.utils</groupId>
+			<artifactId>j-text-utils</artifactId>
+			<version>0.3.3</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>com.sleepycat</groupId>
 			<artifactId>je</artifactId>
 			<version>7.3.7</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna</artifactId>
@@ -298,6 +305,10 @@
 
 
 	<repositories>
+		<repository>
+			<id>somegitrepo</id>
+			<url>https://github.com/neilpanchal/j-text-utils/raw/master/repo</url>
+		</repository>
 		<repository>
 			<id>central</id>
 			<name>Maven Repository Switchboard</name>
