--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>gnu</groupId>
 	<artifactId>fastmath</artifactId>
 	<properties>
 		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
@@ -360,4 +359,5 @@
 		</repository>
 	</distributionManagement>
 
+	<groupId>sc</groupId>
 </project>
