--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,15 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
 					only. It has no influence on the Maven build itself. -->
 				<plugin>
@@ -260,6 +269,13 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>java-oo</groupId>
+			<artifactId>javac8-oo-plugin</artifactId>
+			<version>0.5</version>
+			<scope>provided</scope> <!-- compile-only dep -->
+		</dependency>
+
+		<dependency>
 			<groupId>org.knowm.xchart</groupId>
 			<artifactId>xchart</artifactId>
 			<version>3.5.0</version>
@@ -304,6 +320,10 @@
 
 
 	<repositories>
+		<repository>
+			<id>amelentev</id>
+			<url>http://amelentev.github.io/mvnrepo/</url>
+		</repository>
 		<repository>
 			<id>somegitrepo</id>
 			<url>https://github.com/neilpanchal/j-text-utils/raw/master/repo</url>
