--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/Maple.jar"/>
+	<classpathentry kind="lib" path="lib/externalcall.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
