maple interface working.. emulating windoze: stephen@bb:~$ covsolver fixme:ver:GetCurrentPackageId (0x23f510 (nil)): stub fixme:heap:RtlSetHeapInformation 0x368f0000 0 0x47cba0 4 stub fixme:ver:GetCurrentPackageId (0x47a230 (nil)): stub libname := "C:\\maple2017\\lib", "c:\\research" {mustar(beta[1]) = -1/2*alpha[1]*lambda/(alpha[1]-beta[1])} bytes used=568320, alloc=5292032, time=0.5499999999999999 {mustar(beta[1]) = -1/2*lambda*(alpha[1]^2*beta[2]+alpha[1]*alpha[2]*beta[1]+alpha[1]*alpha[2]*beta[2]-alpha[1]*beta[1]*beta[2]-alpha[1]*beta[2]^2+alpha[2]^2*beta[1]-2*alpha[2]*beta[1]*beta[2])/(alpha[1]^2*beta[2]+alpha[1]*alpha[2]*beta[1]+alpha[1]*alpha[2]*beta[2]-2*alpha[1]*beta[1]*beta[2]-alpha[1]*beta[2]^2+alpha[2]^2*beta[1]-alpha[2]*beta[1]^2-2*alpha[2]*beta[1]*beta[2]+beta[1]^2*beta[2]+beta[1]*beta[2]^2), mustar(beta[2]) = -1/2*lambda*(alpha[1]^2*beta[2]+alpha[1]*alpha[2]*beta[1]+alpha[1]*alpha[2]*beta[2]-2*alpha[1]*beta[1]*beta[2]+alpha[2]^2*beta[1]-alpha[2]*beta[1]^2-alpha[2]*beta[1]*beta[2])/(alpha[1]^2*beta[2]+alpha[1]*alpha[2]*beta[1]+alpha[1]*alpha[2]*beta[2]-2*alpha[1]*beta[1]*beta[2]-alpha[1]*beta[2]^2+alpha[2]^2*beta[1]-alpha[2]*beta[1]^2-2*alpha[2]*beta[1]*beta[2]+beta[1]^2*beta[2]+beta[1]*beta[2]^2)} Done

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
 /target/
-/zeros1
-/zeros6
-/Z.png
-/hs_err_pid13180.log
+/hs_err_*.log
 /mvi.log
 /README.libfastmath~
-/hs_err_pid5941.log
-/hs_err_pid6023.log
-/test.mat
-/test.mat.bak
-/shell.startup~
-/hs_err_pid32695.log
-/SPY.mat.bak
-/cool.mat
-/SPY.mat
+/*.mat
+/*.bak
+/*~
