--- a/pom.xml
+++ b/pom.xml
@@ -302,11 +302,16 @@
 			<artifactId>commons-math3</artifactId>
 			<version>3.6</version>
 		</dependency>
- <dependency>
-      <groupId>com.github.dakusui</groupId>
-      <artifactId>combinatoradix</artifactId>
-      <version>0.8.2</version>
-    </dependency>		
+		<dependency>
+			<groupId>com.github.dakusui</groupId>
+			<artifactId>combinatoradix</artifactId>
+			<version>0.8.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.xiantrimble.combinatorics</groupId>
+			<artifactId>combinatorics</artifactId>
+			<version>0.2.0</version>
+		</dependency>
 	</dependencies>
 
 
