--- a/pom.xml
+++ b/pom.xml
@@ -312,6 +312,11 @@
 			<artifactId>combinatorics</artifactId>
 			<version>0.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
 	</dependencies>
 
 
