--- a/pom.xml
+++ b/pom.xml
@@ -270,7 +270,11 @@
 	</build>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.fusesource.jansi</groupId>
+			<artifactId>jansi</artifactId>
+			<version>1.16</version>
+		</dependency>
 		<dependency>
 			<groupId>org.knowm.xchart</groupId>
 			<artifactId>xchart</artifactId>
