--- a/research/.gitignore
+++ b/research/.gitignore
@@ -4,3 +4,10 @@
 /autocorrelation1_MAS.bak
 /autocorrelation2_MAS.bak
 /dlksf;ldskf;dslf1_MAS.bak
+/ZCauchy.aux
+/ZCauchy.bbl
+/ZCauchy.blg
+/ZCauchy.dvi
+/ZCauchy.log
+/ZCauchy.out
+/ZCauchy.spl
