--- a/pom.xml
+++ b/pom.xml
@@ -302,7 +302,8 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.4</version>
+			<version>4.11</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.oracle</groupId>
