--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>sc</groupId>
 	<artifactId>fastmath</artifactId>
 	<properties>
 		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
@@ -317,10 +318,12 @@
 			<version>3.6</version>
 		</dependency>
 		<dependency>
-			<groupId>org.oxbow</groupId>
-			<artifactId>swing-bits</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+
+			<groupId>org.bidib.org.oxbow</groupId>
+			<artifactId>swingbits</artifactId>
+			<version>1.2.2</version>
 		</dependency>
+
 	</dependencies>
 
 
@@ -395,5 +398,4 @@
 		</repository>
 	</distributionManagement>
 
-	<groupId>sc</groupId>
 </project>
