--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.sleepycat</groupId>
+			<artifactId>je</artifactId>
+			<version>7.0.6</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.fusesource.jansi</groupId>
 			<artifactId>jansi</artifactId>
 			<version>1.16</version>
