--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<!-- ©2003-2017 by Stephen Crowley under the GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
